<resources>
    <string name="app_name">Place Your Order</string>
    <string name="add_data">Add Data</string>
    <string name="delete_whole">Delete Whole List</string>
    <string name="order_now">Order Now via phone</string>
    <string name="save">Save this item</string>
    <string name="delete_item">Delete this item</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_phone_eg">123456789</string>
    <string name="image">Image</string>
    <string name="browse_image">select Image</string>
    <string name="submit">Submit</string>
    <string name="place_more_order">Place more order</string>
    <string name="dummy_data">Insert dummy data</string>
    <string name="add_product">Add new item to list</string>
    <string name="add_new_item">Add new item to list</string>
    <string name="edit_item">Edit Items</string>
    <string name="place_order">Place order for this item through call</string>
    <string name="phone">Phone</string>
    <string name="unsaved_prompt">There are unsaved changes in the item information. Do you want to continue?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="askToDelete">Do you want to delete the item?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="product_missing">Missing item name</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="delete_whole_list">Delete whole list</string>
    <string name="empty_cart">Yor cart is empty.Click on plus button to add new items</string>
    <string name="name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Nearest Market Name</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="deleteall_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_image">Image</string>
    <string name="order_message">Want to place the order via phone?</string>
    <string name="order_more">Order More</string>
    <string name="Rs">\u20B9</string>
    <string name="fill">Kindly fill all the details</string>



</resources>


