<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="8"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/price"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#111111"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:text="@string/item_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#111111"
            android:textSize="20sp" />



    </LinearLayout>


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/order"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src ="@drawable/cart" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#ffffff" />

    </RelativeLayout>
</LinearLayout>